add css and html, fixed css name

--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="lt">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Puslapis</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    <!-- All content will be added here -->
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <div id="pirmas">
+      <h1 id="pirma-antraste">Pirma antraste</h1>
+      <p id="pirmas-paragrafas">Pirmas paragrafas</p>
+    </div>
 
     <script src="index.js"></script>
-</body>
+  </body>
 </html>
