add secound section an js

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
       <h1 id="pirma-antraste">Pirma antraste</h1>
       <p id="pirmas-paragrafas">Pirmas paragrafas</p>
     </div>
+    <div id="antras">
+      <p id="paragrafo-tekstas">Ši teksta turime matyti konsolėje</p>
+    </div>
 
     <script src="index.js"></script>
   </body>
