add 3 div and js

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <div id="antras">
       <p id="paragrafo-tekstas">Ši teksta turime matyti konsolėje</p>
     </div>
+    <div id="trecias">
+      <p>Turime matyti konsolėje paragrafa arba tik teksta</p>
+    </div>
 
     <script src="index.js"></script>
   </body>
