--- a/index.html
+++ b/index.html
@@ -16,6 +16,14 @@
     <div id="trecias">
       <p>Turime matyti konsolėje paragrafa arba tik teksta</p>
     </div>
+    <div id="ketvirtas">
+      <button
+        onclick="document.getElementById('paragrafas-pakeitimui').innerHTML = 'Pakeistas paragrafo tekstas'"
+      >
+        Pakeisti teksta
+      </button>
+      <p id="paragrafas-pakeitimui">Nepakeistas paragrafo tekstas</p>
+    </div>
 
     <script src="index.js"></script>
   </body>
