--- a/index.html
+++ b/index.html
@@ -24,6 +24,26 @@
       </button>
       <p id="paragrafas-pakeitimui">Nepakeistas paragrafo tekstas</p>
     </div>
+    <div id="penktas">
+      <button
+        onclick="document.getElementById('paragrafas-5').style.fontSize = '35px'"
+      >
+        Pakeisti dydį
+      </button>
+      <button
+        onclick="document.getElementById('paragrafas-5').style.color = 'red'"
+      >
+        Pakeisti spalvą
+      </button>
+      <p id="paragrafas-5">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione
+        inventore error nulla nam molestias nobis provident reprehenderit qui
+        magnam deserunt suscipit dolorem consequatur officiis, maxime recusandae
+        doloribus debitis hic iste ex ullam mollitia. Maxime nam, provident ad
+        iste porro ipsam commodi facere tenetur assumenda quas dolorum officiis
+        optio suscipit sequi.
+      </p>
+    </div>
 
     <script src="index.js"></script>
   </body>
