add buttons to turn on light and turn off

--- a/index.html
+++ b/index.html
@@ -44,6 +44,17 @@
         optio suscipit sequi.
       </p>
     </div>
+    <div id="sestas">
+      <p><img id="lempute" src="light-on.png" alt="lempute" /></p>
+      <button onclick="document.getElementById('lempute').src = 'light-on.png'">
+        Įjungti lemputę
+      </button>
+      <button
+        onclick="document.getElementById('lempute').src = 'light-off.png'"
+      >
+        Išjungti lemputę
+      </button>
+    </div>
 
     <script src="index.js"></script>
   </body>
