add div after sixth html and js to replace text

--- a/index.html
+++ b/index.html
@@ -55,6 +55,13 @@
         Išjungti lemputę
       </button>
     </div>
+    <div id="septintas">
+      <button onclick="pakeisti()">Pakeisti tekstą</button>
+      <p id="septinto-tekstas">
+        Rerum magnam libero nesciunt fugiat saepe voluptates omnis
+        necessitatibus repellendus!
+      </p>
+    </div>
 
     <script src="index.js"></script>
   </body>
