add ninth div- style change with parameters

--- a/index.html
+++ b/index.html
@@ -62,6 +62,35 @@
         necessitatibus repellendus!
       </p>
     </div>
+    <div id="astuntas">
+      <button onclick="pakeisti2('astunto-tekstas', 'vienas du trys')">
+        Pakeisti tekstą 1
+      </button>
+      <button
+        onclick="pakeisti2('astunto-tekstas', 'batai kupranugaris meska')"
+      >
+        Pakeisti tekstą 2
+      </button>
+      <button onclick="pakeisti2('astunto-tekstas', 'stalas kede medis')">
+        Pakeisti tekstą 3
+      </button>
+      <button onclick="pakeisti2('astunto-tekstas', 'berzas obelis gyvate')">
+        Pakeisti tekstą 4
+      </button>
+      <p id="astunto-tekstas">
+        Rerum magnam libero nesciunt fugiat saepe voluptates omnis
+        necessitatibus repellendus!
+      </p>
+    </div>
+    <div id="devintas">
+      <button onclick="kitaSpalva('devinto-tekstas', 'black')">Juodai</button>
+      <button onclick="kitaSpalva('devinto-tekstas', 'red')">Raudonai</button>
+      <button onclick="kitaSpalva('devinto-tekstas', 'green')">Žaliai</button>
+      <p id="devinto-tekstas">
+        Rerum magnam libero nesciunt fugiat saepe voluptates omnis
+        necessitatibus repellendus!
+      </p>
+    </div>
 
     <script src="index.js"></script>
   </body>
