tenth div - arithmetic operation

--- a/index.html
+++ b/index.html
@@ -91,6 +91,12 @@
         necessitatibus repellendus!
       </p>
     </div>
+    <div id="desimtas">
+      <p id="suma"></p>
+      <p id="skirtumas"></p>
+      <p id="sandauga"></p>
+      <p id="dalmuo"></p>
+    </div>
 
     <script src="index.js"></script>
   </body>
