--- a/index.html
+++ b/index.html
@@ -124,6 +124,32 @@
         autem cumque.
       </p>
     </div>
+    <div id="tryliktas">
+      <div class="parametrai">
+        <p>Plotis:</p>
+        <input
+          type="range"
+          min="100"
+          max="500"
+          value="100"
+          id="plocio-slider"
+        />
+        <p>Aukštis:</p>
+        <input
+          type="range"
+          min="100"
+          max="500"
+          value="100"
+          id="auksio-slider"
+        />
+        <p id="dvylikto-tekstas">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas
+          accusantium adipisci
+        </p>
+      </div>
+
+      <div id="div-keitimui">tekstas per viduri</div>
+    </div>
 
     <script src="index.js"></script>
   </body>
