Thirteenth Div - Interactive Parameters

--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
           value="100"
           id="plocio-slider"
         />
+
         <p>Aukštis:</p>
         <input
           type="range"
@@ -142,12 +143,20 @@
           value="100"
           id="auksio-slider"
         />
-        <p id="dvylikto-tekstas">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas
-          accusantium adipisci
-        </p>
+        <p>Spalva:</p>
+        <select id="spalvos-pasirinkimas">
+          <option value="burlywood">Burlywood</option>
+          <option value="black">Juoda</option>
+          <option value="red">Raudona</option>
+          <option value="green">Žalia</option>
+        </select>
+        <p>Tekstas per vidurį:</p>
+        <input type="text" value="tekstas per viduri" id="tekstas-divui" />
       </div>
-
+      <p id="dvylikto-tekstas">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas
+        accusantium adipisci
+      </p>
       <div id="div-keitimui">tekstas per viduri</div>
     </div>
 
