Fourteenth Div - Textarea Input

--- a/index.html
+++ b/index.html
@@ -159,7 +159,19 @@
       </p>
       <div id="div-keitimui">tekstas per viduri</div>
     </div>
-
+    <div id="keturioliktas">
+      <p>Jūsų surinktas tekstas:</p>
+      <textarea id="zodziu-inputas" rows="10" readonly></textarea>
+      <p>
+        <button onclick="pridetiZodi('zodziu-inputas', 'Kupranugaris')">
+          Kupranugaris
+        </button>
+        <button onclick="pridetiZodi('zodziu-inputas', 'Ožiaragis')">
+          Ožiaragis
+        </button>
+        <button onclick="pridetiZodi('zodziu-inputas', 'Doggo')">Doggo</button>
+      </p>
+    </div>
     <script src="index.js"></script>
   </body>
 </html>
