Fifteenth Div - Longest Word

--- a/index.html
+++ b/index.html
@@ -159,6 +159,11 @@
       </p>
       <div id="div-keitimui">tekstas per viduri</div>
     </div>
+
+
+
+
+
     <div id="keturioliktas">
       <p>Jūsų surinktas tekstas:</p>
       <textarea id="zodziu-inputas" rows="10" readonly></textarea>
@@ -172,6 +177,16 @@
         <button onclick="pridetiZodi('zodziu-inputas', 'Doggo')">Doggo</button>
       </p>
     </div>
+
+    <div id="penkioliktas">
+    <p>Jusu surinktas tekstas:</p>
+    <textarea id="penkiolikto-tekstas" rows="10"></textarea>
+    <p>
+        <button onclick="zodziuKiekis()">Zodziu kiekis</button>
+        <button onclick="ilgiausiasZodis()">Ilgiausias zodis</button>
+    </p>
+    <p id="penkiolikto-atsakymai"></p>
+</div>
     <script src="index.js"></script>
   </body>
 </html>
