Fifteenth Div - Longest Word

--- a/index.html
+++ b/index.html
@@ -134,6 +134,16 @@
         </p>
     </div>
 
+    <div id="penkioliktas">
+    <p>Jusu surinktas tekstas:</p>
+    <textarea id="penkiolikto-tekstas" rows="10"></textarea>
+    <p>
+        <button onclick="zodziuKiekis()">Zodziu kiekis</button>
+        <button onclick="ilgiausiasZodis()">Ilgiausias zodis</button>
+    </p>
+    <p id="penkiolikto-atsakymai"></p>
+</div>
+
     <script src="index.js"></script>
 </body>
 </html>
