The page will display two buttons and two content blocks, initially hidden. Clicking Pirmas skirtukas  shows the first block and hides the second. Clicking Antras skirtukas  shows the second block and hides the first.

--- a/index.html
+++ b/index.html
@@ -144,6 +144,21 @@
     <p id="penkiolikto-atsakymai"></p>
 </div>
 
+<div id="sesioliktas">
+    <p>
+        <button onclick="pirmoSkirtukoTurinys()">Pirmas skirtukas</button>
+        <button onclick="antroSkirtukoTurinys()">Antras skirtukas</button>
+    </p>
+
+    <div id="pirmas-skirtukas" class="skirtukas">
+        <p>pirmo skirtuko content</p>
+    </div>
+
+    <div id="antras-skirtukas" class="skirtukas">
+        <p>antro skirtuko content</p>
+    </div>
+</div>
+
     <script src="index.js"></script>
 </body>
 </html>
