Seventeenth Div - Toggle Button Text and Content

--- a/index.html
+++ b/index.html
@@ -159,6 +159,11 @@
     </div>
 </div>
 
+<div id="septynioliktas">
+    <button id="perjungti-mygtukas">Rodyti</button>
+    <p id="perjungti-tekstas">Tekstas</p>
+</div>
+
     <script src="index.js"></script>
 </body>
 </html>
