--- a/index.html
+++ b/index.html
@@ -1,169 +1,282 @@
 <!DOCTYPE html>
 <html lang="lt">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Puslapis</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
     <div id="pirmas">
-        <h1 id="pirma-antraste">Pirma antraste</h1>
-        <p id="pirmas-paragrafas">Pirmas paragrafas</p>
+      <h1 id="pirma-antraste">Pirma antraste</h1>
+      <p id="pirmas-paragrafas">Pirmas paragrafas</p>
     </div>
 
     <div id="antras">
-        <p id="paragrafo-tekstas">
-            Ši teksta turime matyti konsolėje
-        </p>
+      <p id="paragrafo-tekstas">Ši teksta turime matyti konsolėje</p>
     </div>
 
     <div id="trecias">
-        <p>Turime matyti konsolėje paragrafa arba tik teksta</p>
+      <p>Turime matyti konsolėje paragrafa arba tik teksta</p>
     </div>
 
     <div id="ketvirtas">
-        <button onclick="document.getElementById('paragrafas-pakeitimui').innerHTML = 'Pakeistas paragrafo tekstas'">
-            Pakeisti teksta
-        </button>
-        <p id="paragrafas-pakeitimui">Nepakeistas paragrafo tekstas</p>
+      <button
+        onclick="document.getElementById('paragrafas-pakeitimui').innerHTML = 'Pakeistas paragrafo tekstas'"
+      >
+        Pakeisti teksta
+      </button>
+      <p id="paragrafas-pakeitimui">Nepakeistas paragrafo tekstas</p>
     </div>
 
     <div id="penktas">
-        <button onclick="document.getElementById('paragrafas-5').style.fontSize = '35px'">
-            Pakeisti dydį
-        </button>
-        <button onclick="document.getElementById('paragrafas-5').style.color = 'red'">
-            Pakeisti spalvą
-        </button>
-        <p id="paragrafas-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione inventore error nulla nam molestias nobis provident reprehenderit qui magnam deserunt suscipit dolorem consequatur officiis, maxime recusandae doloribus debitis hic iste ex ullam mollitia. Maxime nam, provident ad iste porro ipsam commodi facere tenetur assumenda quas dolorum officiis optio suscipit sequi.</p>
+      <button
+        onclick="document.getElementById('paragrafas-5').style.fontSize = '35px'"
+      >
+        Pakeisti dydį
+      </button>
+      <button
+        onclick="document.getElementById('paragrafas-5').style.color = 'red'"
+      >
+        Pakeisti spalvą
+      </button>
+      <p id="paragrafas-5">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione
+        inventore error nulla nam molestias nobis provident reprehenderit qui
+        magnam deserunt suscipit dolorem consequatur officiis, maxime recusandae
+        doloribus debitis hic iste ex ullam mollitia. Maxime nam, provident ad
+        iste porro ipsam commodi facere tenetur assumenda quas dolorum officiis
+        optio suscipit sequi.
+      </p>
     </div>
 
     <div id="sestas">
-        <p><img id="lempute" src="light-off.png" alt="lempute"></p>
-        <button onclick="document.getElementById('lempute').src = 'light-on.png'">
-            Įjungti lemputę
-        </button>
-        <button onclick="document.getElementById('lempute').src = 'light-off.png'">
-            Išjungti lemputę
-        </button>
+      <p><img id="lempute" src="light-off.png" alt="lempute" /></p>
+      <button onclick="document.getElementById('lempute').src = 'light-on.png'">
+        Įjungti lemputę
+      </button>
+      <button
+        onclick="document.getElementById('lempute').src = 'light-off.png'"
+      >
+        Išjungti lemputę
+      </button>
     </div>
 
     <div id="septintas">
-        <button onclick="pakeisti()">Pakeisti tekstą</button>
-        <p id="septinto-tekstas">Rerum magnam libero nesciunt fugiat saepe voluptates omnis necessitatibus repellendus!</p>
+      <button onclick="pakeisti()">Pakeisti tekstą</button>
+      <p id="septinto-tekstas">
+        Rerum magnam libero nesciunt fugiat saepe voluptates omnis
+        necessitatibus repellendus!
+      </p>
     </div>
 
     <div id="astuntas">
-        <button onclick="pakeisti2('astunto-tekstas', 'vienas du trys')">Pakeisti tekstą 1</button>
-        <button onclick="pakeisti2('astunto-tekstas', 'batai kupranugaris meska')">Pakeisti tekstą 2</button>
-        <button onclick="pakeisti2('astunto-tekstas', 'stalas kede medis')">Pakeisti tekstą 3</button>
-        <button onclick="pakeisti2('astunto-tekstas', 'berzas obelis gyvate')">Pakeisti tekstą 4</button>
-        <p id="astunto-tekstas">Rerum magnam libero nesciunt fugiat saepe voluptates omnis necessitatibus repellendus!</p>
+      <button onclick="pakeisti2('astunto-tekstas', 'vienas du trys')">
+        Pakeisti tekstą 1
+      </button>
+      <button
+        onclick="pakeisti2('astunto-tekstas', 'batai kupranugaris meska')"
+      >
+        Pakeisti tekstą 2
+      </button>
+      <button onclick="pakeisti2('astunto-tekstas', 'stalas kede medis')">
+        Pakeisti tekstą 3
+      </button>
+      <button onclick="pakeisti2('astunto-tekstas', 'berzas obelis gyvate')">
+        Pakeisti tekstą 4
+      </button>
+      <p id="astunto-tekstas">
+        Rerum magnam libero nesciunt fugiat saepe voluptates omnis
+        necessitatibus repellendus!
+      </p>
     </div>
 
     <div id="devintas">
-        <button onclick="kitaSpalva('devinto-tekstas', 'black')">Juodai</button>
-        <button onclick="kitaSpalva('devinto-tekstas', 'red')">Raudonai</button>
-        <button onclick="kitaSpalva('devinto-tekstas', 'green')">Žaliai</button>
-        <p id="devinto-tekstas">Rerum magnam libero nesciunt fugiat saepe voluptates omnis necessitatibus repellendus!</p>
+      <button onclick="kitaSpalva('devinto-tekstas', 'black')">Juodai</button>
+      <button onclick="kitaSpalva('devinto-tekstas', 'red')">Raudonai</button>
+      <button onclick="kitaSpalva('devinto-tekstas', 'green')">Žaliai</button>
+      <p id="devinto-tekstas">
+        Rerum magnam libero nesciunt fugiat saepe voluptates omnis
+        necessitatibus repellendus!
+      </p>
     </div>
 
     <div id="desimtas">
-        <p id="suma"></p>
-        <p id="skirtumas"></p>
-        <p id="sandauga"></p>
-        <p id="dalmuo"></p>
+      <p id="suma"></p>
+      <p id="skirtumas"></p>
+      <p id="sandauga"></p>
+      <p id="dalmuo"></p>
     </div>
-    
+
     <div id="vienuoliktas">
-        <div id="vienuolikto-turinys"></div>
+      <div id="vienuolikto-turinys"></div>
     </div>
 
     <div id="dvyliktas">
-        <p>Spalva:</p>
-        <button onclick="keistiSpalva('dvylikto-tekstas', 'black')">Originali</button>
-        <button onclick="keistiSpalva('dvylikto-tekstas', 'red')">Raudona</button>
-        <button onclick="keistiSpalva('dvylikto-tekstas', 'royalblue')">Mėlyna</button>
-        <button onclick="keistiSpalva('dvylikto-tekstas', 'green')">Žalia</button>
+      <p>Spalva:</p>
+      <button onclick="keistiSpalva('dvylikto-tekstas', 'black')">
+        Originali
+      </button>
+      <button onclick="keistiSpalva('dvylikto-tekstas', 'red')">Raudona</button>
+      <button onclick="keistiSpalva('dvylikto-tekstas', 'royalblue')">
+        Mėlyna
+      </button>
+      <button onclick="keistiSpalva('dvylikto-tekstas', 'green')">Žalia</button>
 
-        <p>Teksto dydis:</p>
-        <button onclick="keistiDydi('dvylikto-tekstas', '16')">Originalus</button>
-        <button onclick="keistiDydi('dvylikto-tekstas', '18')">18px</button>
-        <button onclick="keistiDydi('dvylikto-tekstas', '24')">24px</button>
-        <button onclick="keistiDydi('dvylikto-tekstas', '12')">12px</button>
+      <p>Teksto dydis:</p>
+      <button onclick="keistiDydi('dvylikto-tekstas', '16')">Originalus</button>
+      <button onclick="keistiDydi('dvylikto-tekstas', '18')">18px</button>
+      <button onclick="keistiDydi('dvylikto-tekstas', '24')">24px</button>
+      <button onclick="keistiDydi('dvylikto-tekstas', '12')">12px</button>
 
-        <p id="dvylikto-tekstas">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas accusantium adipisci reiciendis aut laudantium! Commodi quod eum libero aliquid ad officiis accusamus id esse corrupti quae assumenda itaque, autem cumque.</p>
+      <p id="dvylikto-tekstas">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas
+        accusantium adipisci reiciendis aut laudantium! Commodi quod eum libero
+        aliquid ad officiis accusamus id esse corrupti quae assumenda itaque,
+        autem cumque.
+      </p>
     </div>
 
     <div id="tryliktas">
-        <div class="parametrai">
-            <div class="parametras">
-                <p>Plotis:</p>
-                <input type="range" min="100" max="500" value="100" id="plocio-slider">
-            </div>
-            <div class="parametras">
-                <p>Aukstis:</p>
-                <input type="range" min="100" max="500" value="100" id="aukscio-slider">
-            </div>
-            <div class="parametras">
-                <p>Spalva:</p>
-                <select id="spalvos-pasirinkimas">
-                    <option value="burlywood">Burlywook</option>
-                    <option value="black">Black</option>
-                    <option value="red">Raudona</option>
-                    <option value="green">Zalia</option>
-                </select>
-            </div>
-            <div class="parametras">
-                <p>Tekstas per viduri:</p>
-                <input type="text" value="tekstas per viduri" id="tekstas-divui">
-            </div>
-            <div id="div-keitimui">
-                tekstas per viduri
-            </div>
-        </div>       
+      <div class="parametrai">
+        <div class="parametras">
+          <p>Plotis:</p>
+          <input
+            type="range"
+            min="100"
+            max="500"
+            value="100"
+            id="plocio-slider"
+          />
+        </div>
+        <div class="parametras">
+          <p>Aukstis:</p>
+          <input
+            type="range"
+            min="100"
+            max="500"
+            value="100"
+            id="aukscio-slider"
+          />
+        </div>
+        <div class="parametras">
+          <p>Spalva:</p>
+          <select id="spalvos-pasirinkimas">
+            <option value="burlywood">Burlywook</option>
+            <option value="black">Black</option>
+            <option value="red">Raudona</option>
+            <option value="green">Zalia</option>
+          </select>
+          <p>Teksto spalva:</p>
+          <input
+            type="color"
+            value="#000000"
+            id="teksto-spalvos-pasirinkimas"
+          />
+        </div>
+        <div class="parametras">
+          <p>Tekstas per viduri:</p>
+          <input type="text" value="tekstas per viduri" id="tekstas-divui" />
+        </div>
+        <div id="div-keitimui">tekstas per viduri</div>
+      </div>
     </div>
 
     <div id="keturioliktas">
-        <p>Jūsų surinktas tekstas:</p>
-        <textarea id="zodziu-inputas" rows="10" readonly></textarea>
-        <p>
-            <button onclick="pridetiZodi('zodziu-inputas', 'Kupranugaris')">Kupranugaris</button>
-            <button onclick="pridetiZodi('zodziu-inputas', 'Ožiaragis')">Ožiaragis</button>
-            <button onclick="pridetiZodi('zodziu-inputas', 'Doggo')">Doggo</button>
-        </p>
+      <p>Jūsų surinktas tekstas:</p>
+      <textarea id="zodziu-inputas" rows="10" readonly></textarea>
+      <p>
+        <button onclick="pridetiZodi('zodziu-inputas', 'Kupranugaris')">
+          Kupranugaris
+        </button>
+        <button onclick="pridetiZodi('zodziu-inputas', 'Ožiaragis')">
+          Ožiaragis
+        </button>
+        <button onclick="pridetiZodi('zodziu-inputas', 'Doggo')">Doggo</button>
+      </p>
     </div>
 
     <div id="penkioliktas">
-    <p>Jusu surinktas tekstas:</p>
-    <textarea id="penkiolikto-tekstas" rows="10"></textarea>
-    <p>
+      <p>Jusu surinktas tekstas:</p>
+      <textarea id="penkiolikto-tekstas" rows="10"></textarea>
+      <!-- ... inside penkioliktas div -->
+      <p>
         <button onclick="zodziuKiekis()">Zodziu kiekis</button>
         <button onclick="ilgiausiasZodis()">Ilgiausias zodis</button>
-    </p>
-    <p id="penkiolikto-atsakymai"></p>
-</div>
+        <button onclick="trumpiausiasZodis()">Trumpiausias zodis</button>
+      </p>
+      <p id="penkiolikto-atsakymai"></p>
+    </div>
 
-<div id="sesioliktas">
-    <p>
+    <div id="sesioliktas">
+      <p>
         <button onclick="pirmoSkirtukoTurinys()">Pirmas skirtukas</button>
         <button onclick="antroSkirtukoTurinys()">Antras skirtukas</button>
-    </p>
+      </p>
 
-    <div id="pirmas-skirtukas" class="skirtukas">
+      <div id="pirmas-skirtukas" class="skirtukas">
         <p>pirmo skirtuko content</p>
-    </div>
+      </div>
 
-    <div id="antras-skirtukas" class="skirtukas">
+      <div id="antras-skirtukas" class="skirtukas">
         <p>antro skirtuko content</p>
+      </div>
+    </div>
+
+    <div id="septynioliktas">
+      <button id="perjungti-mygtukas">Rodyti</button>
+      <p id="perjungti-tekstas">Tekstas</p>
+    </div>
+
+    <div id="astuonioliktas">
+      <button id="kitas-perjungti-mygtukas">Rodyti</button>
+      <p id="kitas-perjungti-tekstas">Tekstas</p>
+    </div>
+
+    <div id="devynioliktas">
+      <p id="devyniolikto-tekstas">Slepti sita teksta ant paspaudimo</p>
+    </div>
+
+
+
+
+    < id="papildoma-uzduotis-3">
+    <h2>Papildoma užduotis 3</h2>
+    <button onclick="styleLongParagraphs()">Spalvinti ilgus paragrafus</button>
+    <div id="text-blocks-container">
+        <p class="text-block">Trumpas tekstas.</p>
+        <p class="text-block">Tai yra ilgesnis tekstas, kuriame yra daugiau nei šimtas simbolių. Tikiuosi, kad šis tekstas bus pakankamai ilgas, kad galėčiau pamatyti jo stilių pakeistą, kai paspausiu mygtuką. Dar šiek tiek teksto, kad pasiekčiau limitą.</p>
+        <p class="text-block">Dar vienas trumpas tekstas.</p>
+        <p class="text-block">Šis tekstas taip pat bus ilgas. Mums reikia patikrinti ar stiliavimas veikia teisingai su keliais ilgais teksto blokais. Tai padės užtikrinti, kad funkcija yra universali ir tinkamai apdoroja visus atitinkamus elementus puslapyje, kurie atitinka nurodytas sąlygas. Tai yra puikus testas, kad įsitikintume, jog viskas veikia gerai. Dar šiek tiek teksto, kad pasiekčiau limitą.</p>
+        <p class="text-block">Dar vienas trumpas tekstas.</p>
+    </div>
+
+    <div id="papildoma-uzduotis-4">
+    <h2>Papildoma užduotis 4 - Skaičiavimai</h2>
+    <input type="number" id="skaicius1" placeholder="Įveskite skaičių 1">
+    <input type="number" id="skaicius2" placeholder="Įveskite skaičių 2">
+    <p>
+        <button onclick="atliktiSkaiciavimus()">Atlikti Skaičiavimus</button>
+    </p>
+    <div id="skaiciavimu-rezultatai"></div>
+</div>
+<div id="papildoma-uzduotis-5">
+    <h2>Papildoma užduotis 5 - Modalinis langas</h2>
+    <button onclick="toggleModal()">Atidaryti Modalą</button>
+</div>
+
+<!-- Modal structure -->
+<div id="myModal" class="modal">
+    <div class="modal-content">
+        <span class="close-button" onclick="toggleModal()">×</span>
+        <p>Sveiki, tai yra modalinis langas!</p>
+        <button onclick="toggleModal()">Uždaryti Modalą</button>
     </div>
 </div>
 
-<div id="septynioliktas">
-    <button id="perjungti-mygtukas">Rodyti</button>
-    <p id="perjungti-tekstas">Tekstas</p>
-</div>
+
+
+
 
     <script src="index.js"></script>
-</body>
+  </body>
 </html>
